fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,5 @@ html, body {
         display: block;
         float: left;
         margin-left: 180px;
-        margin-bottom: 0.8em;
     }
 }
